rust/herb-highlighter/tests/snapshots/file_renderer_test__applies_syntax_highlighting_in_plain_rendering.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: "renderer.render_plain(\"<div>Hello World</div>\", width(), false, false)"
---
[38;2;224;108;117m<[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m[38;2;171;178;191mHello[0m [38;2;171;178;191mWorld[0m[38;2;224;108;117m</[0m[38;2;224;108;117mdiv[0m[38;2;224;108;117m>[0m
