rust/herb-highlighter/tests/snapshots/file_renderer_test__applies_syntax_highlighting_with_focus_line.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: "renderer.render_with_focus_line(\"/test/file.erb\", content, 2, 1, true,\nwidth(), false, false)"
---
[36m/test/file.erb[0m

    [90m  1[0m [90m│[0m [2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mline[22m[0m[2m [22m[2;38;2;171;178;191m[2m1[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mdiv[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
[36m  → [0m[1m  2[0m [90m│[0m [38;2;224;108;117m<[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m[38;2;171;178;191mline[0m [38;2;171;178;191m2[0m[38;2;224;108;117m</[0m[38;2;224;108;117mspan[0m[38;2;224;108;117m>[0m
    [90m  3[0m [90m│[0m [2;38;2;224;108;117m[2m<[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m[2;38;2;171;178;191m[2mline[22m[0m[2m [22m[2;38;2;171;178;191m[2m3[22m[0m[2;38;2;224;108;117m[2m</[22m[0m[2;38;2;224;108;117m[2mp[22m[0m[2;38;2;224;108;117m[2m>[22m[0m
