rust/herb-highlighter/tests/snapshots/file_renderer_test__does_not_truncate_lines_shorter_than_max_width.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: stripped
---
/test/file.erb

      1 │ Short line
