rust/herb-highlighter/tests/snapshots/file_renderer_test__handles_focus_line_at_beginning_of_file.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

  →   1 │ line 1
      2 │ line 2
