rust/herb-highlighter/tests/snapshots/file_renderer_test__handles_focus_line_at_end_of_file.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      2 │ line 2
  →   3 │ line 3
