rust/herb-highlighter/tests/snapshots/file_renderer_test__handles_special_characters.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      1 │ line with	tabs
      2 │ line with "quotes"
      3 │ line with "single quotes"
