rust/herb-highlighter/tests/snapshots/file_renderer_test__handles_unicode_characters.snap
---
source: herb-highlighter/tests/file_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      1 │ Unicode: 🎉 émojis and àccénts
